tests/valid/reborrow/reborrow_mut_from_immut_bound_mut_ref.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let r = (&mut x) in
    let r2 = (&mut *r) in
    (*r2 = 42)
}
