tests/invalid/borrow_conflict/shared_after_mut.facet
fn shared_after_mut(mut x: unrestricted isize) -> unrestricted isize {
    let r1: affine &mut unrestricted isize = (&mut x) in
    let r2: unrestricted &unrestricted isize = (&x) in
    (*r2)
}
